# self-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  restart.bat  start.bat  start.sh
.agents/personal_tools/: agent.py  agent.yml  mcp.yml
.agents/personal_tools/skills/: format-shifter.yml  json-master.yml  pdf-master.yml
.agents/personal_tools/tools/: __init__.py
.agents/programming/: agent.py  agent.yml  mcp.yml
.agents/programming/skills/: code-reviewer.yml  git-manager.yml  repo-doctor.yml
.agents/programming/tools/: __init__.py  shell.py
.agents/scheduler/: agent.py  agent.yml  mcp.yml
.agents/scheduler/skills/: cron-master.yml  reminder.yml  schedule-auditor.yml
.agents/scheduler/tools/: __init__.py
.agents/work/: agent.py  agent.yml  mcp.yml
.agents/work/skills/: daily-reporter.yml  feishu-publisher.yml  task-tracker.yml
.agents/work/tools/: __init__.py
docker/: Dockerfile.api  Dockerfile.frontend  nginx.conf
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: PageHeader.tsx  StatusTag.tsx
frontend/src/pages/: AgentsPage.tsx  CapabilitiesPage.tsx  ChatPage.tsx  KnowledgePage.tsx  SettingsPage.tsx  StatisticsPage.tsx  TasksPage.tsx
self_agent/: __init__.py
self_agent/app/: main.py  state.py
self_agent/app/agents/: base.py  programming.py  (+4 more)
tests/: test_sqlite_persistence.py  test_supervisor_routing.py
需求/: gleaming-beaming-flask.md  技术方案.md
需求/docs/: architecture.html  architecture.md
(+34 files in other folders)
