[project]
name = "self-agent"
version = "0.1.0"
description = "Personal multi-agent work assistant MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0",
  "uvicorn[standard]>=0.30.0",
  # LangChain + LangGraph (Agent orchestration)
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
  "langgraph>=0.2.50",
  "langgraph-checkpoint-sqlite>=2.0.0",
  # LangSmith (observability)
  "langsmith>=0.2.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["self_agent*"]
exclude = ["frontend*", "docker*", "tests*", "需求*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
